--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,33 +2,62 @@
 
 	<div class="container">
 
-		<div class="row">
+		<hr>
 
-			<div class="col-sm-7">{% include testimonials.html %}</div>
+		<ul class="list-inline text-center">
+			<ul class="list-inline text-center">
 
-			<div class="col-sm-5">
-				<ul class="nav nav-pills text-center">
-					{% for page in site.data.social %}
+				{% for link in site.data.menu_nav %}
+				{% if link.title %}
+				<li>
+					<a href="{{ link.href | prepend: site.baseurl }}">{{ link.title }}</a>
+				</li>
+				{% endif %}
+				{% endfor %}
+
+				<li>
+					<a href="#">
+						<i class="fa fa-facebook"></i>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<i class="fa fa-twitter"></i>
+					</a>
+				</li>
+
+			</ul>
+
+			<p>
+				<ul class="list-inline text-center small">
 					<li>
-						<a href="{{page.link}}{{page.id}}" target="_blank" title="{{page.name}}">
-							<i class="fa fa-{{page.icon}}"></i>
-						</a>
+						<a href="#">Terms of Service</a>
 					</li>
-					{% endfor %}
-
-					{% if site.email %}<li><a href="mailto:{{site.email}}" title="Email"><i class="fa fa-envelope"></i></a></li>{% endif %}
+					<li>
+						<a href="#">Privacy Policy</a>
+					</li>
+					<li>
+						<a href="#">Return Policy</a>
+					</li>
 				</ul>
+			</p>
+
+			<div class="text-center small text-muted">
+				<p>
+					&copy; 2005-2015<br>
+					<!-- Hot Car Accessories Inc. -->
+					Hillsborough County
+				</p>
+
 			</div>
 
 		</div>
 
-	</div>
+	</footer>
 
-</footer>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/js/bootstrap-3.3.5.min.js"></script>
-<script src="/js/theme.js"></script>
-<script src="/js/bslightbox.js"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="/js/bootstrap-3.3.5.min.js"></script>
+	<script src="/js/theme.js"></script>
+	<script src="/js/bslightbox.js"></script>
