--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,6 @@
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-26436152-1', 'auto');
-	ga('send', 'pageview');
-</script>
-
 <header>
 
-	<nav class="navbar navbar-default" role="navigation">
+	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -20,12 +10,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+				<a class="navbar-brand to-top" href="{{ site.baseurl }}/" title="{{ site.title }}">
+					{{ site.title }}
+				</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
+				<!-- <ul class="nav navbar-nav">
 
 					{% for link in site.data.menu_nav %}
 					{% if link.title %}
@@ -35,12 +27,45 @@
 					{% endif %}
 					{% endfor %}
 
+				</ul> -->
+
+				<ul class="nav navbar-nav">
+
+					<li class="">
+						<a href="/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="0">Free</a>
+					</li>
+					<li class="">
+						<a href="/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="1">Basic</a>
+					</li>
+					<li class="">
+						<a href="/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="2">Pro</a>
+					</li>
+
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Products <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+
+							<li><a href="#">Lorem</a></li>
+							<li><a href="#">Ipsum</a></li>
+							<li><a href="#">Dolor</a></li>
+
+							<li role="separator" class="divider"></li>
+							<li><a href="#">View All Products</a></li>
+						</ul>
+					</li>
+					<li class="">
+						<a href="#qa" class="to-qa">Q & A</a>
+					</li>
+
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right hidden-xs">
 
 					<p class="navbar-text">
-						<span class="label label-success">{{site.tagline}}</span>
+
+						<a href="#" class="label label-primary">#FreedomToGo</a>
+
 					</p>
 
 				</ul>
