--- a/css/main.scss
+++ b/css/main.scss
@@ -52,35 +52,35 @@ body {
 
 	#item0 {
 		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3b679e+0,2b88d9+50,207cca+51,7db9e8+100&amp;0.65+0,0.65+100 */
-		background-image: -moz-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%, rgba(43,136,217,0.65) 50%, rgba(32,124,202,0.65) 51%, rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-168504675.jpg'); /* FF3.6+ */
-		background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(59,103,158,0.65)), color-stop(50%,rgba(43,136,217,0.65)), color-stop(51%,rgba(32,124,202,0.65)), color-stop(100%,rgba(125,185,232,0.65))), url('/images/ThinkstockPhotos-168504675.jpg'); /* Chrome,Safari4+ */
-		background-image: -webkit-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-168504675.jpg'); /* Chrome10+,Safari5.1+ */
-		background-image: -o-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-168504675.jpg'); /* Opera 11.10+ */
-		background-image: -ms-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-168504675.jpg'); /* IE10+ */
-		background-image: linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-168504675.jpg'); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a63b679e', endColorstr='#a67db9e8',GradientType=1 ), url('/images/ThinkstockPhotos-168504675.jpg'); /* IE6-9 fallback on horizontal gradient */
+		background-image: -moz-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%, rgba(43,136,217,0.65) 50%, rgba(32,124,202,0.65) 51%, rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* FF3.6+ */
+		background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(59,103,158,0.65)), color-stop(50%,rgba(43,136,217,0.65)), color-stop(51%,rgba(32,124,202,0.65)), color-stop(100%,rgba(125,185,232,0.65))), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* Chrome,Safari4+ */
+		background-image: -webkit-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* Chrome10+,Safari5.1+ */
+		background-image: -o-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* Opera 11.10+ */
+		background-image: -ms-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* IE10+ */
+		background-image: linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a63b679e', endColorstr='#a67db9e8',GradientType=1 ), url('{{ site.baseurl }}/images/ThinkstockPhotos-168504675.jpg'); /* IE6-9 fallback on horizontal gradient */
 	}
 
 	#item1 {
 		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3b679e+0,2b88d9+50,207cca+51,7db9e8+100&amp;0.65+0,0.65+100 */
-		background-image: -moz-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%, rgba(43,136,217,0.65) 50%, rgba(32,124,202,0.65) 51%, rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-494419003.jpg'); /* FF3.6+ */
-		background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(59,103,158,0.65)), color-stop(50%,rgba(43,136,217,0.65)), color-stop(51%,rgba(32,124,202,0.65)), color-stop(100%,rgba(125,185,232,0.65))), url('/images/ThinkstockPhotos-494419003.jpg'); /* Chrome,Safari4+ */
-		background-image: -webkit-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-494419003.jpg'); /* Chrome10+,Safari5.1+ */
-		background-image: -o-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-494419003.jpg'); /* Opera 11.10+ */
-		background-image: -ms-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-494419003.jpg'); /* IE10+ */
-		background-image: linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-494419003.jpg'); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a63b679e', endColorstr='#a67db9e8',GradientType=1 ), url('/images/ThinkstockPhotos-494419003.jpg'); /* IE6-9 fallback on horizontal gradient */
+		background-image: -moz-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%, rgba(43,136,217,0.65) 50%, rgba(32,124,202,0.65) 51%, rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* FF3.6+ */
+		background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(59,103,158,0.65)), color-stop(50%,rgba(43,136,217,0.65)), color-stop(51%,rgba(32,124,202,0.65)), color-stop(100%,rgba(125,185,232,0.65))), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* Chrome,Safari4+ */
+		background-image: -webkit-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* Chrome10+,Safari5.1+ */
+		background-image: -o-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* Opera 11.10+ */
+		background-image: -ms-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* IE10+ */
+		background-image: linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a63b679e', endColorstr='#a67db9e8',GradientType=1 ), url('{{ site.baseurl }}/images/ThinkstockPhotos-494419003.jpg'); /* IE6-9 fallback on horizontal gradient */
 	}
 
 	#item2 {
 		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3b679e+0,2b88d9+50,207cca+51,7db9e8+100&amp;0.65+0,0.65+100 */
-		background-image: -moz-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%, rgba(43,136,217,0.65) 50%, rgba(32,124,202,0.65) 51%, rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-77136619.jpg'); /* FF3.6+ */
-		background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(59,103,158,0.65)), color-stop(50%,rgba(43,136,217,0.65)), color-stop(51%,rgba(32,124,202,0.65)), color-stop(100%,rgba(125,185,232,0.65))), url('/images/ThinkstockPhotos-77136619.jpg'); /* Chrome,Safari4+ */
-		background-image: -webkit-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-77136619.jpg'); /* Chrome10+,Safari5.1+ */
-		background-image: -o-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-77136619.jpg'); /* Opera 11.10+ */
-		background-image: -ms-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-77136619.jpg'); /* IE10+ */
-		background-image: linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('/images/ThinkstockPhotos-77136619.jpg'); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a63b679e', endColorstr='#a67db9e8',GradientType=1 ), url('/images/ThinkstockPhotos-77136619.jpg'); /* IE6-9 fallback on horizontal gradient */
+		background-image: -moz-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%, rgba(43,136,217,0.65) 50%, rgba(32,124,202,0.65) 51%, rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* FF3.6+ */
+		background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(59,103,158,0.65)), color-stop(50%,rgba(43,136,217,0.65)), color-stop(51%,rgba(32,124,202,0.65)), color-stop(100%,rgba(125,185,232,0.65))), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* Chrome,Safari4+ */
+		background-image: -webkit-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* Chrome10+,Safari5.1+ */
+		background-image: -o-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* Opera 11.10+ */
+		background-image: -ms-linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* IE10+ */
+		background-image: linear-gradient(45deg,  rgba(59,103,158,0.65) 0%,rgba(43,136,217,0.65) 50%,rgba(32,124,202,0.65) 51%,rgba(125,185,232,0.65) 100%), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a63b679e', endColorstr='#a67db9e8',GradientType=1 ), url('{{ site.baseurl }}/images/ThinkstockPhotos-77136619.jpg'); /* IE6-9 fallback on horizontal gradient */
 	}
 }
 
@@ -88,7 +88,7 @@ body {
 
 	
 
-	// background-image: url('/images/ThinkstockPhotos-476997316.jpg');
+	// background-image: url('{{ site.baseurl }}/images/ThinkstockPhotos-476997316.jpg');
 	background-position: center center;
 	background-size: cover;
 
