nav site.baseurl

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,13 +32,13 @@
 				<ul class="nav navbar-nav">
 
 					<li class="">
-						<a href="/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="0">Free</a>
+						<a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="0">Free</a>
 					</li>
 					<li class="">
-						<a href="/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="1">Basic</a>
+						<a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="1">Basic</a>
 					</li>
 					<li class="">
-						<a href="/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="2">Pro</a>
+						<a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="2">Pro</a>
 					</li>
 
 
@@ -55,7 +55,7 @@
 						</ul>
 					</li>
 					<li class="">
-						<a href="#qa" class="to-qa">Q & A</a>
+						<a href="{{ site.baseurl }}/#qa" class="to-qa">Q & A</a>
 					</li>
 
 				</ul>
