--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,6 +58,6 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="/js/bootstrap-3.3.5.min.js"></script>
-	<script src="/js/theme.js"></script>
-	<script src="/js/bslightbox.js"></script>
+	<script src="{{ site.baseurl }}/js/bootstrap-3.3.5.min.js"></script>
+	<script src="{{ site.baseurl }}/js/theme.js"></script>
+	<script src="{{ site.baseurl }}/js/bslightbox.js"></script>
