--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,47 +31,38 @@
 
 				<ul class="nav navbar-nav">
 
-					<li class="">
-						<a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="0">Free</a>
-					</li>
-					<li class="">
-						<a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="1">Basic</a>
-					</li>
-					<li class="">
-						<a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="2">Pro</a>
-					</li>
-
 
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Products <span class="caret"></span></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Paths Before Us <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 
-							<li><a href="#">Lorem</a></li>
-							<li><a href="#">Ipsum</a></li>
-							<li><a href="#">Dolor</a></li>
+							<li><a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="0">Stay The Course</a></li>
+							<li><a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="1">Address Our Challenges</a></li>
+							<li><a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="2">Solve The Problem</a></li>
 
-							<li role="separator" class="divider"></li>
-							<li><a href="#">View All Products</a></li>
-						</ul>
-					</li>
-					<li class="">
-						<a href="{{ site.baseurl }}/#qa" class="to-qa">Q & A</a>
-					</li>
+						<!-- 	<li role="separator" class="divider"></li>
+						<li><a href="#">View All Products</a></li> -->
+					</ul>
+				</li>
 
-				</ul>
+				<li class="">
+					<a href="{{ site.baseurl }}/#questions" class="to-qa">Common Questions</a>
+				</li>
 
-				<ul class="nav navbar-nav navbar-right hidden-xs">
+			</ul>
 
-					<p class="navbar-text">
+			<ul class="nav navbar-nav navbar-right hidden-xs">
 
-						<a href="#" class="label label-primary">#FreedomToGo</a>
+				<p class="navbar-text">
 
-					</p>
+					<a href="#" class="label label-primary">#FreedomToGo</a>
 
-				</ul>
+				</p>
 
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
+			</ul>
+
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
+</nav>
 
 </header>
