--- a/css/main.scss
+++ b/css/main.scss
@@ -79,6 +79,15 @@ body {
 
 .jumbo-parallax {
 
+	h1, h2, h3, h4, h5, h6 {
+
+		color: #fff;
+
+		small {
+			color: #fff;
+		}
+	}
+
 	
 
 	// background-image: url('http://commbocc.github.io/FreedomToGO/images/ThinkstockPhotos-476997316.jpg');
