--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,37 +32,29 @@
 				<ul class="nav navbar-nav">
 
 
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Paths Before Us <span class="caret"></span></a>
-						<ul class="dropdown-menu">
 
-							<li><a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="0">Stay The Course</a></li>
-							<li><a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="1">Address Our Challenges</a></li>
-							<li><a href="{{ site.baseurl }}/#" data-target="#carousel-info-jumbo" class="to-carousel" data-slide-to="2">Solve The Problem</a></li>
+					<li class="">
+						<a href="{{ site.baseurl }}/#paths" class="to-paths">The Paths Before Us</a>
+					</li>
 
-						<!-- 	<li role="separator" class="divider"></li>
-						<li><a href="#">View All Products</a></li> -->
-					</ul>
-				</li>
+					<li class="">
+						<a href="{{ site.baseurl }}/#questions" class="to-qa">Common Questions</a>
+					</li>
 
-				<li class="">
-					<a href="{{ site.baseurl }}/#questions" class="to-qa">Common Questions</a>
-				</li>
+				</ul>
 
-			</ul>
+				<ul class="nav navbar-nav navbar-right hidden-xs">
 
-			<ul class="nav navbar-nav navbar-right hidden-xs">
+					<p class="navbar-text">
 
-				<p class="navbar-text">
+						<a href="#" class="label label-primary">#FreedomToGo</a>
 
-					<a href="#" class="label label-primary">#FreedomToGo</a>
+					</p>
 
-				</p>
+				</ul>
 
-			</ul>
-
-		</div><!-- /.navbar-collapse -->
-	</div><!-- /.container-fluid -->
-</nav>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 
 </header>
