--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,6 +48,7 @@
 					<p class="navbar-text">
 
 						<a href="#" class="label label-primary">#FreedomToGo</a>
+						<a href="#" class="label label-primary">#LetsTalkHC</a>
 
 					</p>
 
