darker footer text, remove related videos at end of video

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,25 +32,15 @@
 
 			</ul>
 
-<!-- 			<p>
-				<ul class="list-inline text-center small">
-					<li>
-						<a href="#">Terms of Service</a>
-					</li>
-					<li>
-						<a href="#">Privacy Policy</a>
-					</li>
-				</ul>
-			</p> -->
+			<p>
+				<div class="text-center small">
+					&copy; 2005-<span id="copyYear">2015</span>
+					<a href="http://hillsboroughcounty.org/" target="_blank">
+						Hillsborough County
+					</a>
 
-			<div class="text-center small text-muted">
-				<p>
-					&copy; 2005-2015<br>
-					<!-- Hot Car Accessories Inc. -->
-					Hillsborough County
-				</p>
-
-			</div>
+				</div>
+			</p>
 
 		</div>
 
