--- a/css/main.scss
+++ b/css/main.scss
@@ -11,13 +11,14 @@
 
 @mixin trans-bg-image($color, $image-url, $opacity: 0.45) {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff851b+0,ff851b+100&amp;0.6+0,0.6+100 */
+	background-image: url($image-url);
 	background-image: -moz-linear-gradient(top,  rgba($color, $opacity) 0%, rgba($color, $opacity) 100%), url($image-url); /* FF3.6+ */
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba($color, $opacity)), color-stop(100%,rgba($color, $opacity))), url($image-url); /* Chrome,Safari4+ */
 	background-image: -webkit-linear-gradient(top,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* Chrome10+,Safari5.1+ */
 	background-image: -o-linear-gradient(top,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* Opera 11.10+ */
 	background-image: -ms-linear-gradient(top,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* IE10+ */
 	background-image: linear-gradient(to bottom,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99ff851b', endColorstr='#99ff851b',GradientType=0 ), url($image-url); /* IE6-9 */
+	// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99ff851b', endColorstr='#99ff851b',GradientType=0 ), url($image-url); /* IE6-9 */
 }
 
 $panel-important-base: #536F86 !default;
