--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@
 	background-image: -o-linear-gradient(top,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* Opera 11.10+ */
 	background-image: -ms-linear-gradient(top,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* IE10+ */
 	background-image: linear-gradient(to bottom,  rgba($color, $opacity) 0%,rgba($color, $opacity) 100%), url($image-url); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73000000', endColorstr='#000000',GradientType=0 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73000000', endColorstr='#73000000',GradientType=0 );
 }
 
 $panel-important-base: #536F86 !default;
