--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,10 @@
 
 
 					<li class="">
+						<a href="{{ site.baseurl }}/#whereWeAre" class="to-wwa">Where We Are</a>
+					</li>
+
+					<li class="">
 						<a href="{{ site.baseurl }}/#paths" class="to-paths">The Paths Before Us</a>
 					</li>
 
