--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,10 @@
 				</li>
 
 				<li>
+					<a href="{{ site.baseurl }}/#whereWeAre" class="to-wwa">Where We Are</a>
+				</li>
+
+				<li>
 					<a href="{{ site.baseurl }}/#paths" class="to-paths">The Paths Before Us</a>
 				</li>
 
