--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/wow-animate.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/wow-animate.min.css">
 
 	<script src="{{ site.baseurl }}/js/wow.min.js"></script>
 	<script>
