--- a/css/main.scss
+++ b/css/main.scss
@@ -169,3 +169,10 @@ body {
 	border-radius: 0px;
 }
 
+@media screen and (max-width: 992px) {
+    .wow-responsive-remove-delay {
+        // animation-name: none !important;
+        // visibility: visible !important;
+        animation-delay: 0s !important;
+    }
+}
