questions header to jumbo

--- a/css/main.scss
+++ b/css/main.scss
@@ -90,7 +90,7 @@ body {
 	background-image: url('http://commbocc.github.io/FreedomToGO/images/train-dark.jpg');
 }
 
-#bikes {
+#questions {
 	background-image: url('http://commbocc.github.io/FreedomToGO/images/bikes-dark.jpg');
 }
 
